@@ -1,3 +1,8 @@
+2012-06-07  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* contrib/toolbar.lisp (define-toolbar-hooks): Add auto-hide
+	clickable toolbar.
+
 2012-06-06  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/xlib-util.lisp (handle-event): Add an additional hook event
